force-app/main/default/objects/Reference_Termination_for_Misconduct__c/Reference_Termination_for_Misconduct__c.object-meta.xml
<CustomObject>
    <label>Reference Termination for Misconduct</label>
    <nameField>
        <displayFormat>RTM-{0000}</displayFormat>
        <label>Reference Termination For Misconduct Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Termination for Misconduct</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>