force-app/main/default/objects/Reference_Termination_for_Misconduct__c/fields/Term_for_Misconduct_Q_11__c.field-meta.xml
<CustomField>
    <fullName>Term_for_Misconduct_Q_11__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Obtain the employee’s job offer letter and/or employment contract, if there is one. Does the offer letter and/or employment contract contain language that impacts how, why, or when the employee can be terminated? Please explain.</inlineHelpText>
    <label>Term for Misconduct Q 11</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>