force-app/main/default/objects/Reference_Termination_for_Misconduct__c/fields/Term_for_Misconduct_Q_5__c.field-meta.xml
<CustomField>
    <fullName>Term_for_Misconduct_Q_5__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If there is a written policy, does the employer consistently enforce it?</inlineHelpText>
    <label>Term for Misconduct Q 5</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>