force-app/main/default/objects/Reference_Termination_for_Misconduct__c/fields/Term_for_Misconduct_Q_7__c.field-meta.xml
<CustomField>
    <fullName>Term_for_Misconduct_Q_7__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Does the employer have a progressive discipline policy in place?</inlineHelpText>
    <label>Term for Misconduct Q 7</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>